--- a/app/assets/stylesheets/pages/_index_offers.scss
+++ b/app/assets/stylesheets/pages/_index_offers.scss
@@ -20,3 +20,19 @@
 .offer-container {
   display: flex;
 }
+
+.center-cropped {
+  width: 100%;
+  height: 210px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+   border-radius: 5px 5px 0 0;
+  // overflow: hidden;
+  object-fit: cover;
+}
+
+
+.total-order {
+  text-align: center;
+}
