fine tuning front

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,6 +13,16 @@
   background-color: lightgrey;
 }
 
+.card-order {
+    flex: 1 1 auto;
+  min-width: 300px;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  transition: all 0.3s ease;
+  background-color: white;
+}
+
 .card:hover {
   margin-top: -5px;
 }
@@ -66,6 +76,10 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px;
+  min-height: 55px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 0 0 5px 5px;
 }
 
 .card-date {
