--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,10 +4,10 @@
 
         <div class="network col-xs-12 col-md-4">
           <ul class="list-inline">
-            <li><a href=""><i class="fa fa-youtube"></i></a></li>
-            <li><a href=""><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.youtube.com/watch?v=i8Z6Ewlbl9k"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/snowbotai/"><i class="fa fa-instagram"></i></a></li>
             <li><a href=""><i class="fa fa-facebook"></i></a></li>
-            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://twitter.com/SnowBot_ai"><i class="fa fa-twitter"></i></a></li>
           </ul>
         </div>
         <div class="copyright col-xs-12 col-md-4">
