--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-
+<br />
   <h1>Your orders</h1>
   <h2>User: <%= current_user.email %></h2>
 
@@ -10,14 +10,14 @@
     <br><br />
 
       <div class="col-xs-12 col-sm-4">
-        <div class="card">
+        <div class="card-order">
           <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
             <%= image_tag order.homeaway_data["photo"], :class => "center-cropped" %>
             <div class="card-category"><h2>Housing</h2></div>
             <div class="card-description">
             </div>
           </div>
-          <div class="card-footer">
+          <div class="card-footer" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "logo_homeaway.png" %>');">
             <div class="card-links">
               <h5></h5>
             </div>
@@ -26,14 +26,14 @@
       </div>
 
       <div class="col-xs-12 col-sm-4">
-        <div class="card">
+        <div class="card-order">
           <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
             <%= image_tag order.drivy_data["photo"], :class => "center-cropped", :align=> "middle"%>
             <div class="card-category"><h2>Car</h2></div>
             <div class="card-description">
             </div>
           </div>
-          <div class="card-footer">
+          <div class="card-footer" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "logo_drivy.png" %>');">
             <div class="card-links">
               <h5></h5>
             </div>
@@ -41,13 +41,25 @@
         </div>
       </div>
 
-      <br><br />
-      <h3>Details of the order</h3>
-      <ul>
-        <li>Status: <%= order.status %></li>
-        <li>Amount: <%= humanized_money_with_symbol(order.amount) %></li>
-      <ul>
-      <br><br />
+      <div class="col-xs-12 col-sm-4">
+        <div class="card-order">
+          <div class="card-body center-cropped" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "lift.png" %>');">
+            <div class="card-category"><h2>Order Status</h2></div>
+            <div class="card-description">
+            </div>
+          </div>
+          <div class="card-footer">
+            <div class="card-links">
+              <h5>Amount: <%= humanized_money_with_symbol(order.amount) %> | Status: <%= order.status %></h5>
+              <!-- <ul> -->
+          <!--       <li>Status: <%= order.status %></li> -->
+                <!-- <li>Amount: <%= humanized_money_with_symbol(order.amount) %></li> -->
+             <!--  <ul> -->
+            </div>
+          </div>
+<!--       <h3>Details of the order</h3> -->
+        </div>
+      </div>
       <hr>
     <% end %>
     <br><br />
