networks url done

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
           <ul class="list-inline">
             <li><a href="https://www.youtube.com/watch?v=i8Z6Ewlbl9k"><i class="fa fa-youtube"></i></a></li>
             <li><a href="https://www.instagram.com/snowbotai/"><i class="fa fa-instagram"></i></a></li>
-            <li><a href=""><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/Snowbot-aicom-509778846073901/"><i class="fa fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/SnowBot_ai"><i class="fa fa-twitter"></i></a></li>
           </ul>
         </div>
