--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -6,20 +6,21 @@
     <center>
       <article>
         <label class="amount">
-          <span>Amount: <%= humanized_money_with_symbol(@order.amount) %></span>
+          <span>Amount: <%= humanized_money(@order.amount) %>€</span>
         </label>
       </article>
-      </center>
-      <br><br />
+    </center>
+    <br><br />
     <center>
       <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-        data-name="SnowBot"
-        data-email="<%= current_user.email %>"
-        data-description="My Ski Trip<%= @order.id %>"
-        data-amount="<%= @order.amount_cents %>"
-        data-currency="<%= @order.amount.currency %>"></script>
-    </center>
-    <% end %>
-  </div>
+      data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+      data-name="SnowBot"
+      data-email="<%= current_user.email %>"
+      data-description="My Ski Trip<%= @order.id %>"
+      data-amount="<%= @order.amount_cents %>"
+      data-currency="<%= @order.amount.currency %>">
+    </script>
+  </center>
+  <% end %>
+</div>
 </div>
