design cards on offer index

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,8 +3,10 @@
   background-color: rgba(70, 175, 248, 0.8);
   border: blue;
   border-radius: 7px;
-  font-size: 15px;
+  // font-size: 20px;
+  font-weight: bolder;
   padding: 15px;
+  color: white;
 }
 
 .btn-custom:hover {
