--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -77,7 +77,7 @@
   <br />
 
   <div class="total-order">
-    <p><strong>Total: <%= offer.total_price %>€ - <em><%= offer.total_price.fdiv(@guests_number.to_i).to_i %>€ per person</em></strong></p>
+    <h5><strong>Total: <%= offer.total_price %>€ - <em><%= offer.total_price.fdiv(@guests_number.to_i).to_i %>€ per person</em></strong></h5>
   </div>
 
     <center>
