add title to flat

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -48,7 +48,7 @@
           </div>
           <div class="card-footer">
             <div class="card-links">
-              <h5><%= offer.car.title %></h5>
+              <h5><%= offer.flat.title %></h5>
               <h5><%= offer.flat.price_by_night %>€ per night</h5>
             </div>
           </div>
