--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,6 +7,7 @@
   flex: 1 1 auto;
   min-width: 300px;
   margin: 10px;
+  margin-bottom: 15px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
   transition: all 0.3s ease;
@@ -21,6 +22,8 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
   transition: all 0.3s ease;
   background-color: white;
+  color: #259F6C;
+  justify-content: center;
 }
 
 .card:hover {
@@ -76,7 +79,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  min-height: 55px;
+  min-height: 65px;
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 0 0 5px 5px;
