--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,13 +1,11 @@
 <div class="container">
-<br />
+
   <h1>Your orders</h1>
   <h2>User: <%= current_user.email %></h2>
-
-  <div class="row orders-history">
-    <% current_user.orders.each do |order| %>
-    <br><br />
-    <p>Total Price: <%= order.total_price %></p>
-    <br><br />
+  <h2>User: <%= current_user.first_name %></h2>
+  <h2>User: <%= current_user.last_name %></h2>
+  <% current_user.orders.each do |order| %>
+    <div class="row separator">
 
       <div class="col-xs-12 col-sm-4">
         <div class="card-order">
@@ -17,7 +15,7 @@
             <div class="card-description">
             </div>
           </div>
-          <div class="card-footer" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "logo_homeaway.png" %>');">
+          <div class="card-footer" style="background-image: url('<%= image_path "logo_homeaway.png" %>');">
             <div class="card-links">
               <h5></h5>
             </div>
@@ -33,7 +31,7 @@
             <div class="card-description">
             </div>
           </div>
-          <div class="card-footer" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "logo_drivy.png" %>');">
+          <div class="card-footer" style="background-image: url('<%= image_path "logo_drivy.png" %>');">
             <div class="card-links">
               <h5></h5>
             </div>
@@ -43,26 +41,19 @@
 
       <div class="col-xs-12 col-sm-4">
         <div class="card-order">
-          <div class="card-body center-cropped" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "lift.png" %>');">
-            <div class="card-category"><h2>Order Status</h2></div>
+          <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "snowbot.png" %>');">
+            <div class="card-category"><h2>Status: <%= order.status %></h2></div>
             <div class="card-description">
             </div>
           </div>
-          <div class="card-footer">
-            <div class="card-links">
-              <h5>Amount: <%= humanized_money_with_symbol(order.amount) %> | Status: <%= order.status %></h5>
-              <!-- <ul> -->
-          <!--       <li>Status: <%= order.status %></li> -->
-                <!-- <li>Amount: <%= humanized_money_with_symbol(order.amount) %></li> -->
-             <!--  <ul> -->
-            </div>
+          <div class="card-footer-order">
+
+              <h5>Amount: <%= humanized_money_with_symbol(order.amount) %></h5>
+
+
           </div>
-<!--       <h3>Details of the order</h3> -->
         </div>
       </div>
-      <hr>
-    <% end %>
-    <br><br />
-
-  </div>
+    </div>
+  <% end %>
 </div>
