--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,8 +5,10 @@
   border-radius: 7px;
   // font-size: 20px;
   font-weight: bolder;
-  padding: 15px;
+  padding: 10px;
   color: white;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .btn-custom:hover {
