--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -28,7 +28,7 @@ h2 {
 .padded {
   padding: 100px 0;
 }
-.wrapper-grey {
+.wrapper-white {
   background: white;
   padding-top: 15px;
   padding-bottom: 15px;
