--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
 
   <div class="wrapper-white text-center">
     <div class="container">
-      <h2 class="text-center">What is your next trip?</h2>
+      <h2 class="text-center">Here is what SnowBot can build for you!</h2>
       <!-- Code your cards  here -->
       <div class="row">
         <!-- design one card first -->
@@ -52,7 +52,8 @@
             </div>
             <div class="card-footer">
               <div class="card-date">
-                <p>Zam's package from 12/12/17</p>
+                <h6>Zam's package</h6>
+                <h6>from 12/12/17</h6>
               </div>
               <div class="card-links">
                 <a href="#"><i class="fa fa-star"></i></a>
@@ -75,7 +76,8 @@
             </div>
             <div class="card-footer">
               <div class="card-date">
-                <p>Zam's package from 12/12/17</p>
+                <h6>Zam's package</h6>
+                <h6>from 12/12/17</h6>
               </div>
               <div class="card-links">
                 <a href="#"><i class="fa fa-star"></i></a>
@@ -98,7 +100,8 @@
             </div>
             <div class="card-footer">
               <div class="card-date">
-                <p>Zam's package from 12/12/17</p>
+                <h6>Zam's package</h6>
+                <h6>from 12/12/17</h6>
               </div>
               <div class="card-links">
                 <a href="#"><i class="fa fa-star"></i></a>
@@ -144,7 +147,7 @@
 
   <div class="wrapper-white">
     <div class="container">
-      <h2 class="text-center">What is your next trip?</h2>
+      <h2 class="text-center">Or maybe like this one?</h2>
       <!-- Code your cards  here -->
       <div class="row">
         <!-- design one card first -->
@@ -161,7 +164,8 @@
             </div>
             <div class="card-footer">
               <div class="card-date">
-                <p>Tony's package from 15/12/17</p>
+                <h6>Tony's package</h6>
+                <h6>from 15/12/17</h6>
               </div>
               <div class="card-links">
                 <a href="#"><i class="fa fa-star"></i></a>
@@ -184,7 +188,8 @@
             </div>
             <div class="card-footer">
               <div class="card-date">
-                <p>Tony's package from 15/12/17</p>
+                <h6>Tony's package</h6>
+                <h6>from 15/12/17</h6>
               </div>
               <div class="card-links">
                 <a href="#"><i class="fa fa-star"></i></a>
@@ -207,7 +212,8 @@
             </div>
             <div class="card-footer">
               <div class="card-date">
-                <p>Tony's package from 15/12/17</p>
+                <h6>Tony's package</h6>
+                <h6>from 15/12/17</h6>
               </div>
               <div class="card-links">
                 <a href="#"><i class="fa fa-star"></i></a>
@@ -222,7 +228,7 @@
 
   <!-- Your newsletter code -->
   <div class="text-center padded" id="newsletter">
-    <h2>Get news from us</h2>
+    <h2>Stay tuned!</h2>
     <p>Leave us your mail and get news from us</p>
     <form class="form-inline">
       <input type="email" placeholder="bob@gmail.com" class="form-control">
