fixing orders card

--- a/app/assets/stylesheets/pages/_index_orders.scss
+++ b/app/assets/stylesheets/pages/_index_orders.scss
@@ -28,7 +28,8 @@ ul {
   display: flex;
   align-items: center;
   padding: 10px;
-  min-height: 65px;
+  min-height: 150px;
+  font-weight: bolder;
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 0 0 5px 5px;
