added flatpickr and colors change on home after selection

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -49,3 +49,15 @@ h2 {
 
 }
 
+
+.search-input  {
+  color: black !important;
+}
+
+.search-input.unselected  {
+  color: rgba(120, 120, 120, 0.8) !important;
+}
+
+.date-input {
+  background-color: white !important;
+}
