--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,11 +12,11 @@
               <%= select_tag 'mountain_chain', options_for_select(
               Domain.select(:mountain_chain).map(&:mountain_chain).uniq
               ),
-              class: "form-control text-center",
+              class: "form-control text-center search-input unselected",
                 placeholder: "Mountain" %>
               <%= date_field 'checkin', nil, class: "form-control datepicker text-center date-input", placeholder: "Checkin" %>
               <%= date_field 'checkout', nil, class: "form-control datepicker text-center date-input", placeholder: "Checkout" %>
-              <%= select_tag 'guests_number', options_for_select([['1'], ['2'], ['3'], ['4'], ['5']]), class: "form-control text-center unselected", id: 'guest', prompt: "Guests" %>
+              <%= select_tag 'guests_number', options_for_select([['1'], ['2'], ['3'], ['4'], ['5']]), class: "form-control text-center unselected search-input", id: 'guest', prompt: "Guests" %>
               <%= submit_tag "Search", class: "btn home-btn" %>
             <% end %>
           </div>
