fixing banner on login

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,6 +8,17 @@
   justify-content: center;
 }
 
+
+.banner-login {
+  color: #333333;
+  text-align: center;
+  height: 100vh;
+  background-size: cover !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .banner h1 {
   font-size: 50px;
   font-weight: bold;
