--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="banner-login" style="background: url('<%= image_path "login.jpg" %>')">
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
@@ -14,7 +15,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
+          <%= f.button :submit, "Sign up", class: "btn-custom" %>
         </div>
         <% end %>
 
@@ -23,6 +24,6 @@
     </div>
   </div>
 </div>
-
+</div>
 
 
