fine tuning design offer index

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
 
-  <h1>Your orders</h1>
-  <h2>Email: <%= current_user.email %></h2>
+  <h1>Your trips</h1>
+  <hr>
+  <h4>Email: <%= current_user.email %></h4>
 
-  <h2><%= "First Name: #{current_user.first_name}" unless current_user.first_name.nil? %></h2>
-  <h2><%= "Last Name: #{current_user.last_name}" unless current_user.last_name.nil? %></h2>
+  <h4><%= "First Name: #{current_user.first_name}" unless current_user.first_name.nil? %></h4>
+  <h4><%= "Last Name: #{current_user.last_name}" unless current_user.last_name.nil? %></h4>
 
   <% current_user.orders.each do |order| %>
     <div class="row separator">
