--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -84,7 +84,7 @@
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 0 0 5px 5px;
-
+  position: relative !important;
 }
 
 .card-date {
@@ -98,6 +98,22 @@
   font-weight: lighter;
   font-size: 12px;
   color: #5C636E;
+}
+
+.card-offer-details {
+  position: absolute !important;
+  top: 20px;
+  left: 10px;
+}
+
+.card-offer-price {
+  position: absolute !important;
+  bottom: 10px;
+  right: 10px;
+}
+
+.snow-level {
+
 }
 
 .card-links i{
@@ -120,3 +136,4 @@
   background: black;
   opacity: 0;
 }
+
