--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <br />
-  <h1>Our very nice Trips found for you</h1>
+  <h1>Our very nice trips found for you</h1>
   <p>
     <span>From <strong><%= @checkin.strftime("%A, %b %d") %></strong></span>
     to
     <span><strong><%= @checkout.strftime("%A, %b %d") %></strong></span>
     <span>
-      (<%= "#{@diff_days}"%> <%= 'night'.pluralize %>
-    </span> )
+      (<%= "#{@diff_days}"%> <%= 'night'.pluralize %>)
+    </span>
   </p>
 
   <hr>
@@ -30,9 +30,11 @@
             </div>
           </div>
           <div class="card-footer">
-            <div class="card-links">
-              <h5>Snow depth at resort: <%= offer.flat.domain.snow_depth_low %> cm</h5>
-              <h5>Snow depth at the top: <%= offer.flat.domain.snow_depth_high %> cm</h5>
+            <div class="card-offer-details">
+              <h5>Snow depth at resort:</h5>
+              <h5><strong><%= offer.flat.domain.snow_depth_low %> cm</strong></h5>
+              <h5>Snow depth at the top:</h5>
+              <h5><strong><%= offer.flat.domain.snow_depth_high %> cm</strong></h5>
             </div>
           </div>
         </div>
@@ -47,10 +49,8 @@
             </div>
           </div>
           <div class="card-footer">
-            <div class="card-links">
-              <h5><%= offer.flat.title %></h5>
-              <h5><%= offer.flat.price_by_night %>€/night</h5>
-            </div>
+            <h5 class="card-offer-details"><%= offer.flat.title %></h5>
+            <h5 class="card-offer-price"><strong><%= offer.flat.price_by_night %>€/night</strong></h5>
           </div>
         </div>
       </div>
@@ -64,23 +64,23 @@
             </div>
           </div>
           <div class="card-footer">
-            <div class="card-links">
+            <div class="card-offer-details">
               <h5><%= offer.car.title %></h5>
-              <h5><%= offer.car.price %>€ for your trip</h5>
+              <h5>Start city: <%= @start_city %></h5>
             </div>
+            <h5 class="card-offer-price"><strong><%= offer.car.price %>€ for your trip</strong></h5>
           </div>
         </div>
       </div>
 
     </div>
   </div>
-<!--   <br /> -->
 
   <div class="total-order">
     <h5><strong>Total: <%= offer.total_price %>€ - <em><%= offer.total_price.fdiv(@guests_number.to_i).to_i %>€ per person</em></strong></h5>
   </div>
-<br />
-    <center>
+  <br />
+  <center>
     <%= simple_form_for(@order)  do |f| %>
     <%= f.input :car_price, :as => :hidden, :input_html => { :value => offer.car.price } %>
     <%= f.input :car_photo, :as => :hidden, :input_html => { :value => offer.car.photo } %>
@@ -91,7 +91,7 @@
     <%= f.button :submit, "Book your trip", class: "btn-custom" %>
     <br><br />
     <% end %>
-    </center>
-    <% end %>
-<br><br />
+  </center>
+  <% end %>
+  <br><br />
 </div>
