--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
     <!-- Links when logged in -->
-    <%= link_to "My Orders", orders_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "My Trips", orders_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <!-- Avatar with dropdown menu -->
     <div class="navbar-wagon-item">
       <div class="dropdown">
