changed the design btn

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -16,11 +16,10 @@
   }
 }
 
-.form-banner {
+.form-banner, .form-subscribe {
   input, select {
     margin-bottom: 15px;
     text-align: center;
     text-align-last:center;
   }
-
 }
