--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -226,12 +226,14 @@
 
   <!-- Your newsletter code -->
   <div class="text-center padded" id="newsletter">
-    <h2>Stay tuned!</h2>
-    <p>Leave us your mail and get news from us</p>
-    <form class="form-inline">
-      <input type="email" placeholder="bob@gmail.com" class="form-control">
-      <input type="submit" value="Subscribe" class="btn btn-primary">
-    </form>
+    <div class="container">
+      <h2>Stay tuned!</h2>
+      <p>Leave us your mail and get news from us</p>
+      <form class="form-inline form-subscribe">
+        <input type="email" placeholder="bob@gmail.com" class="form-control">
+        <input type="submit" value="Subscribe" class="btn btn-custom">
+      </form>
+    </div>
   </div>
 
   <!-- Your map code -->
