--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -22,9 +22,9 @@
 
       <div class="col-xs-12 col-sm-4">
         <div class="card">
-          <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
+          <div class="card-body center-cropped" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path offer.domain.img_domain %>);">
 
-            <%= image_tag offer.domain.img_domain, :class => "center-cropped" %>
+
             <div class="card-category"><h2>Resort</h2></div>
             <div class="card-description">
               <h2><%= offer.domain.name %></h2>
@@ -44,14 +44,16 @@
 
       <div class="col-xs-12 col-sm-4">
         <div class="card">
-          <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
-            <%= image_tag offer.flat_photo, :class => "center-cropped" %>
+          <div class="card-body center-cropped" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path offer.flat_photo %>);">
             <div class="card-category"><h2>Housing</h2></div>
             <div class="card-description">
+              <h2><%= offer.flat_bedrooms_nb %> bedrooms</h2>
             </div>
           </div>
           <div class="card-footer">
-            <h5 class="card-offer-details"><%= offer.flat_title %></h5>
+            <h5 class="card-offer-details"><%= offer.flat_title %>
+              <p>Flat rating: <%= offer.flat_ratings %></p>
+            </h5>
             <h5 class="card-offer-price"><strong><%= offer.flat_price_by_night %>€/night</strong></h5>
           </div>
         </div>
@@ -59,8 +61,7 @@
 
       <div class="col-xs-12 col-sm-4">
         <div class="card">
-          <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));">
-            <%= image_tag offer.car_photo, :class => "center-cropped", :align=> "middle"%>
+          <div class="card-body center-cropped" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path offer.car_photo, :align=> "middle"%>);">
             <div class="card-category"><h2>Car</h2></div>
             <div class="card-description">
             </div>
