--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
     <h2 class="text-center">What a hell is SnowBot?</h2>
     <div class="row">
       <div class="video-responsive">
-        <center><iframe width="420" height="315" src="https://www.youtube.com/embed/i8Z6Ewlbl9k?rel=0" frameborder="0" allowfullscreen></iframe></center>
+        <center><iframe width="420" height="315" src="https://www.youtube.com/embed/4_iLphoPTd8?rel=0" frameborder="0" allowfullscreen></iframe></center>
       </div>
     </div>
   </div>
