parcours from index of offers till payments

--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -93,7 +93,7 @@
   </div>
   <br>
   <center>
-    <%= simple_form_for([@offer, @order, @diff_days])  do |f| %>
+    <%= simple_form_for([@offer, @order])  do |f| %>
       <%= f.button :submit, "Book your trip", class: "btn-custom" %>
     <% end %>
   </center>
