--- a/app/assets/stylesheets/pages/_index_offers.scss
+++ b/app/assets/stylesheets/pages/_index_offers.scss
@@ -23,11 +23,11 @@
 
 .center-cropped {
   width: 100%;
-  height: 210px;
+  height: 150px;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-   border-radius: 5px 5px 0 0;
+  border-radius: 10px !important;
   // overflow: hidden;
   object-fit: cover;
 }
