add the banner in a container

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <!-- <h1>Pages#home</h1>
   <p>Find me in app/views/pages/home.html.erb</p> -->
 
+<div class="container">
   <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path "background.jpg" %>')">
     <div class="banner-content">
       <h1>FIND YOUR SKI TRIP</h1>
@@ -24,6 +25,8 @@
           <%= link_to image_tag('messenger-button.png', class: "btn-img"), "https://www.messenger.com/t/509778846073901", class: "btn-img" %>
     </div>
   </div>
+
+</div>
 
   <div class="container">
     <h2 class="text-center">What a hell is SnowBot?</h2>
