added btn signin with FB

--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,6 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Login", omniauth_authorize_path(resource_name, provider), class: "btn-custom"  %><br />
+    <%= link_to image_tag('button-signin.png', class: "btn-img btn-img-lg"), omniauth_authorize_path(resource_name, provider) %><br />
   <% end -%>
 <% end -%>
