--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
               <%= submit_tag "Search", class: "btn btn-custom" %>
             <% end %> -->
           </div>
-          <%= link_to image_tag('messenger-button.png', class: "btn-img"), "https://www.messenger.com/t/509778846073901", class: "btn-img" %>
+          <%= link_to image_tag('messenger-button.png', class: "btn-img btn-img-md"), "https://www.messenger.com/t/509778846073901" %>
     </div>
     </div>
 
