--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,9 @@
     </div>
     <% else %>
     <!-- Login link (when logged out) -->
-    <%= link_to t(".sign_in", default: "Sign in with Facebook"), user_facebook_omniauth_authorize_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%#= link_to t(".sign_in", default: "Sign in with Facebook"), user_facebook_omniauth_authorize_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to t(".sign_in", default: image_tag('button-signin.png', class: "btn-img btn-img-md")), user_facebook_omniauth_authorize_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%#= link_to image_tag('button-signin.png', class: "btn-img btn-img-lg"), omniauth_authorize_path(resource_name, provider) %>
     <% end %>
   </div>
   <!-- Dropdown list appearing on mobile only -->
